commented debug values

--- a/src/filter_data.ipynb
+++ b/src/filter_data.ipynb
@@ -55,18 +55,18 @@
     "filtered_path = model_config[\"filter\"][0][\"filtered_path\"]\n",
     "\n",
     "# For Debug you need to uncomment these values\n",
-    "puYear = model_config[\"filter\"][0][\"puYear\"]\n",
-    "puMonth = model_config[\"filter\"][0][\"puMonth\"]\n",
-    "passengerCount = model_config[\"filter\"][0][\"passengerCount\"]\n",
-    "totalAmount = model_config[\"filter\"][0][\"totalAmount\"]\n",
-    "tripDistance = model_config[\"filter\"][0][\"tripDistance\"]\n",
+    "# puYear = model_config[\"filter\"][0][\"puYear\"]\n",
+    "# puMonth = model_config[\"filter\"][0][\"puMonth\"]\n",
+    "# passengerCount = model_config[\"filter\"][0][\"passengerCount\"]\n",
+    "# totalAmount = model_config[\"filter\"][0][\"totalAmount\"]\n",
+    "# tripDistance = model_config[\"filter\"][0][\"tripDistance\"]\n",
     "\n",
     "\n",
-    "# puYear = int(dbutils.widgets.get('puYear'))\n",
-    "# puMonth = int(dbutils.widgets.get('puMonth'))\n",
-    "# passengerCount = int(dbutils.widgets.get('passengerCount'))\n",
-    "# totalAmount = int(dbutils.widgets.get('totalAmount'))\n",
-    "# tripDistance = int(dbutils.widgets.get('tripDistance'))"
+    "puYear = int(dbutils.widgets.get('puYear'))\n",
+    "puMonth = int(dbutils.widgets.get('puMonth'))\n",
+    "passengerCount = int(dbutils.widgets.get('passengerCount'))\n",
+    "totalAmount = int(dbutils.widgets.get('totalAmount'))\n",
+    "tripDistance = int(dbutils.widgets.get('tripDistance'))"
    ]
   },
   {
